--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "vite build",
     "serve": "vite preview"
   },
+  "license": "MIT",
   "dependencies": {
     "history": "^5.0.1",
     "react": "^17.0.0",
