--- a/package.json
+++ b/package.json
@@ -13,22 +13,23 @@
   "license": "MIT",
   "dependencies": {
     "history": "^5.0.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^18.0.0-rc.2",
+    "react-dom": "^18.0.0-rc.2",
     "react-router-dom": "^6.0.0-beta.7"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.3.4",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/jit": "^0.1.18",
     "@vitejs/plugin-react": "^1.0.0",
     "autoprefixer": "^10.3.6",
-    "eslint": "^7.32.0",
+    "eslint": "^8.4.1",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.26.1",
     "postcss": "^8.3.8",
-    "tailwindcss": "^2.2.16",
-    "vite": "^2.6.0"
+    "tailwindcss": "^3.0.0",
+    "vite": "^2.7.1"
   }
 }
