--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "name": "Eternum Zeta"
   },
   "description": "Starter using Vite, React, Tailwind, Eslint and Router.",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,22 +13,22 @@
   "license": "MIT",
   "dependencies": {
     "history": "^5.3.0",
-    "react": "^18.0.0-rc.2",
-    "react-dom": "^18.0.0-rc.2",
-    "react-router-dom": "^6.0.0-beta.7"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.0",
-    "@vitejs/plugin-react": "^1.2.0",
-    "autoprefixer": "^10.4.4",
-    "eslint": "^8.11.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.4",
+    "@vitejs/plugin-react": "^1.3.1",
+    "autoprefixer": "^10.4.5",
+    "eslint": "^8.14.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.29.4",
     "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23",
-    "vite": "^2.8.6"
+    "tailwindcss": "^3.0.24",
+    "vite": "^2.9.5"
   }
 }
